swagger for SaveDriverLocation endpoint, 'ApiResponse' renamed to 'RestResponse'
