# controllers/model/rest.go
@@ -1,6 +1,6 @@
 package model
 
-type ApiResponse struct {
+type RestResponse struct {
 	Code    int         `json:"code"`
 	Message string      `json:"message"`
 	Data    interface{} `json:"data"`
